# open-swe-thunderbolt

./: Dockerfile.render  Makefile  THUNDERBOLT-TODO.md  THUNDERBOLT.md  pyproject.toml
.github/workflows/: ci.yml  reviewer_eval.yml
agent/: completion.py  prompt.py  server.py
agent/integrations/: daytona.py
agent/tools/: linear_comment.py
agent/utils/: agent_comments.py  github_comments.py  linear.py  linear_team_repo_map.py  model.py
agent/webhooks/: common.py  github.py  github_routes.py  linear.py  linear_routes.py
tests/github/: test_github_issue_webhook.py
tests/webhooks/: test_agent_comments.py  test_github_ci_autofix.py  test_linear_webhook_labels.py
